tests/baselines/reference/parserUnicode1.errors.txt
tests/cases/conformance/parser/ecmascript5/parserUnicode1.ts(6,5): error TS2304: Cannot find name '$ERROR'.
tests/cases/conformance/parser/ecmascript5/parserUnicode1.ts(10,5): error TS2304: Cannot find name '$ERROR'.


==== tests/cases/conformance/parser/ecmascript5/parserUnicode1.ts (2 errors) ====
    try {
      var \u0078x = 6;
    
      if (xx !== 6) {
    
        $ERROR('#6.1: var \\u0078x = 1; xx === 6. Actual: ' + (xx));
        ~~~~~~
!!! error TS2304: Cannot find name '$ERROR'.
      }
    }
    catch (e) {
        $ERROR('#6.2: var \\u0078x = 1; xx === 6. Actual: ' + (xx));
        ~~~~~~
!!! error TS2304: Cannot find name '$ERROR'.
    
    }